// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-sge_form-field should return a field object with a name and value 1`] = `
Object {
  "Test_Number_Field__c": 10,
}
`;

exports[`c-sge_form-field should work when the value is undefined 1`] = `
Object {
  "Test_Number_Field__c": undefined,
}
`;
